<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.technow.kjurseller.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/logo"
            android:layout_gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/layout_roundedtop">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Login to \nYour Account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22sdp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEdtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:theme="@style/TextInputLayoutWhite"
                    app:errorTextAppearance="@style/ErrorText"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEdtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:theme="@style/TextInputLayoutWhite"
                    app:errorTextAppearance="@style/ErrorText"
                    app:hintTextAppearance="@style/HintText"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/btnForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/forgot_password_u"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/btn_rounded_white"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
